# adu_adoration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  pinterest-sync.yml
apartment/: README.md  generate_floorplans.py
documents/: README.md
images/: README.md
inspiration/: README.md
model/: README.md  generate_3d_model.py  site-model-3d.html  site-model.mtl
plan/: generate_site_plan.py  site-plan.dxf
renderings/: massing-3d-interactive.html  photoreal-render-prompt.md
sync/: README.md  board.txt  manifest.json  pinterest_pull.py
